--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
 #app-title h1.padding-box {
   padding: 30px;
 }
+
+#meme-image {
+  max-height: 400px;
+}
+
+#meme-form {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+
+.text-center {
+ text-align: center;
+}
